--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="style/home.css">
+    <link rel="shortcut icon" href="icons/favicon.ico">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -24,7 +25,7 @@
         <div class="text">
             <div class="title-line">
                 <h3 class="h3">twentieS</h3>
-                <a href="https://www.spotify.com/" target="_blank"><img src="icons/logo.svg" alt="logo spotify"></a>
+                <a href="https://www.spotify.com/" target="_blank"><img src="icons/spotify-logo.svg" alt="logo spotify"></a>
             </div>
             <div>
                 <h5 class="h5">a playlist of twenty songs based on you five top tracks and artists</h5>
