--- a/public/style/home.css
+++ b/public/style/home.css
@@ -1,8 +1,8 @@
 :root {
-    --background-color: whitesmoke;
+    --background-color: #f5f5f5;
     --text-color: rgb(145, 145, 145);
     --spotify-green: rgb(30 215 96);
-    --font-family: 'Montserrat', sans-serif;
+    --font-family: "Montserrat", sans-serif;
 }
 
 body {
