--- a/public/style/result.css
+++ b/public/style/result.css
@@ -1,6 +1,7 @@
 .container {
     margin: 2% auto 0 auto;
     width: 100%;
+    align-items: center;
 }
 
 .box-playlist {
@@ -10,6 +11,25 @@
     overflow: auto;
     background-color: var(--text-color);
     border-radius: 8px;
+    position: relative;
+    z-index: 0;
+}
+
+.info-box-tracks {
+    font-family: var(--font-family);
+    visibility: hidden;
+    background-color: var(--spotify-green);
+    color: black;
+    text-align: center;
+    padding: 0.5em 0.5em;
+    border-radius: 8px;
+    font-size: 15px;
+    text-align: center;
+    width: 312px;
+    height: auto;
+    position: absolute;
+    z-index: 1;
+    box-shadow: inset 0 0 1em var(--text-color), 0 0 1em rgba(114, 114, 114, 0.336);
 }
 
 .box-track {
@@ -23,24 +43,33 @@ h5:hover {
     cursor: default;
 }
 
+.text:hover .info-box-tracks {
+    visibility: visible;
+}
+
 ::-webkit-scrollbar {
     width: 12px;
     height: 12px;
 }
 
- ::-webkit-scrollbar-track {
+a {
+    text-decoration: none;
+    color: black;
+}
+
+::-webkit-scrollbar-track {
     border: 1px solid var(--text-color);
     border-radius: 10px;
 }
 
- ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: rgb(187, 187, 187);
     border-radius: 8px;
 }
 
- ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background: white;
-    transition: 0.10s;
+    transition: 0.1s;
 }
 
 .spotify-track {
