artists recommendation update

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -5,7 +5,8 @@
     <title>twentieS</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="style/home.css">
     <link rel="shortcut icon" href="icons/favicon.ico">
@@ -14,7 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $("body").hide().fadeIn(1500);
         });
     </script>
@@ -25,7 +26,8 @@
         <div class="text">
             <div class="title-line">
                 <h3 class="h3">twentieS</h3>
-                <a href="https://www.spotify.com/" target="_blank"><img src="icons/spotify-logo.svg" alt="logo spotify"></a>
+                <a href="https://www.spotify.com/" target="_blank"><img src="icons/spotify-logo.svg"
+                        alt="logo spotify"></a>
             </div>
             <div>
                 <h5 class="h5">a playlist of twenty songs based on you five top tracks and artists</h5>
